<resources>
    <string name="app_name">cCare</string>
    <string name="title">LOG IN</string>
    <string name="email">email@hotmail.com</string>
    <string name="image">image</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="older_person_data">Older person data</string>
    <string name="responsible_registration">Responsible Registration</string>
    <string name="name_lastname">Name and surname</string>
    <string name="number_tlf">Phone number</string>
    <string name="relation">Relationship</string>
    <string name="other_contact">Other contact</string>
    <string name="address">Address</string>
    <string name="birth">Birth</string>
    <string name="sex">Select sex:</string>
    <string name="medical_data">Medical data</string>
    <string name="allergies">Allergies</string>
    <string name="allergies_types">Type allergies</string>
    <string name="blood_type">Blood type</string>
    <string name="medications_you_take">Medications you take</string>
    <string name="title_permanent_parameters">Permanent parameters</string>
    <string name="permanent_parameters">persona con Alzheimer, Diabetes, movilidad reducida, demencia senil...</string>
    <string name="title_temporal_parameters">Temporal parameters</string>
    <string name="temporal_parameters">enfermedad, reposo, ausencia en el hogar, infección</string>
    <string name="title_routine_schedule">Routine schedule</string>
    <string name="title_sleep_time">Sleep time and desviation margin</string>
    <string name="sleep_time">7 hours and 2 hours desviations</string>
    <string name="title_stay_bathroom">Stay in the bathroom</string>
    <string name="time_bathroom">30 minutes</string>
    <string name="select_user">Select user:</string>
</resources>
