<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image"
        android:layout_marginTop="@dimen/margin_image"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/c_care" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:fontFamily="@font/adamina"
        android:text="@string/older_person_data"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/name_lastname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:ems="10"
        android:hint="@string/number_tlf"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/birth"
        android:inputType="date"
        android:textAlignment="center"
        android:autofillHints="" />

    <TextView
        android:id="@+id/title_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout2"
        android:layout_marginRight="@dimen/margin_left"
        android:text="@string/sex"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sex_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout2"
        android:layout_marginRight="@dimen/margin_left" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout2"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@color/colorAccent"
        android:fontFamily="@font/adamina"
        android:text="@string/done" />
</LinearLayout>