<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image"
        android:layout_marginTop="@dimen/margin_image"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/c_care" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:contentDescription="@string/title_permanent_parameters"
        android:fontFamily="@font/adamina"
        android:text="@string/title_permanent_parameters"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/param_perm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:gravity="start|top"
        android:hint="@string/permanent_parameters"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:text="@string/title_temporal_parameters"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/param_tem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:gravity="start|top"
        android:hint="@string/temporal_parameters"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout2"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/adamina"
        android:text="@string/done"
        android:textSize="18sp" />

</LinearLayout>