<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image"
        android:layout_marginTop="@dimen/margin_image"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/c_care" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:fontFamily="@font/adamina"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:autofillHints="" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/adamina"
        android:text="@string/done" />
</LinearLayout>