<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image"
        android:layout_marginTop="@dimen/margin_image"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/c_care" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:fontFamily="@font/adamina"
        android:text="@string/medical_data"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_layout2"
        android:layout_marginRight="@dimen/margin_left"
        android:fontFamily="@font/adamina"
        android:text="@string/allergies"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout2"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/allergies_types"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" />
</LinearLayout>
